--- a/css/jointjs-editor.css
+++ b/css/jointjs-editor.css
@@ -33,11 +33,9 @@
     margin-bottom: 0;
 }
 
-.label-measure {
+#label-measure {
     visibility: hidden;
     position: absolute;
-    font-size: 14px;
-    max-width: 200px;
     white-space: pre-line;
 }
 
@@ -47,4 +45,22 @@
 
 .form-item__description ul {
     list-style-type: "- ";
+}
+
+.node-div {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column
+}
+
+.node-div p,
+.node-div h1,
+.node-div h2,
+.node-div h3,
+.node-div h4,
+.node-div h5,
+.node-div h6 {
+    margin: 0
 }
