--- a/templates/jointjs-diagram.html.twig
+++ b/templates/jointjs-diagram.html.twig
@@ -2,4 +2,8 @@
     <div class="jointjs-view" data-diagram="{{ diagram_data }}">
         <!-- This is where the JointJS viewer will be rendered. -->
     </div>
+    <button class="jointjs-download-btn btn btn-primary" type="submit">
+        <i class="far fa-file-download"></i>
+        <span class="btn-label">Save as PNG</span>
+    </button>
 </div>
